# Shipping-a-Data-Product

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  scraper_session.session
api/: crud.py  database.py  main.py  models.py  schemas.py
data/raw/telegram_messages/2025-07-12/: CheMed123.json  lobelia4cosmetics.json  tikvahpharma.json
src/: load_env.py  load_to_postgres.py  logger.py  scrape_telegram.py  yolo_enrichment.py
telegram_dbt/: README.md  dbt_project.yml
telegram_dbt/models/: schema.yml  yolo_detections.csv
telegram_dbt/models/marts/: dim_channels.sql  dim_dates.sql  fct_image_detections.sql  fct_messages.sql  schema.yml
telegram_dbt/models/staging/: schema.yml  stg_telegram_messages.sql
telegram_pipeline/: README.md  job.py  ops.py  pyproject.toml  repository.py  schedule.py  setup.cfg  setup.py
