[project]
name = "telegram_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<=3.13.3"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "telegram_pipeline.definitions"
code_location_name = "telegram_pipeline"

[tool.setuptools.packages.find]
exclude=["telegram_pipeline_tests"]
